Starting to move from local DCX_Api PHP class inclusion to HTTP requests against the DC-X JSON API. (For now, just adding Guzzle.)

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ],
     "require":
     {
-        "digicol/schemaorg-sdk": "dev-master"
+        "digicol/schemaorg-sdk": "dev-master",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "autoload":
     {
